tiếp tục thêm các chức năng cần thiết
