# apps/auth-service/src/routes/auth.router.ts
@@ -1,10 +1,11 @@
 import express, { Router } from "express";
-import { userRegister, verifyUser } from "@/controller/auth.controller";
+import { loginUser, userRegister, verifyUser } from "../controller/auth.controller";
 
 const router: Router = express.Router();
 
 router.post("/user-registration", userRegister);
-router.post("/verify-registration",verifyUser)
+router.post("/verify-registration", verifyUser);
+router.post("/login", loginUser);
 
 
 
